feat: design timer page

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -7,10 +7,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap" rel="stylesheet">
     <title>ROYAL POKER TIMER</title>
   </head>
-  <body class="bg-gray-900 text-slate-50 antialiased">
-    <div id="root"></div>
+  <body class="bg-neutral-900 text-slate-50 antialiased">
+    <div id="root" class="min-h-screen"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
